# npu-agent

./: .gitignore  README.md  pyproject.toml
.codex/skills/npu-server-ops/: SKILL.md
.codex/skills/npu-server-ops/references/: usage.md
docs/: v2raya-command-log-2026-04-10.md  v2raya-work-log-2026-04-10.md
server/: __init__.py
server/common/: __init__.py  context.py  logger.py  resource_manager.py  scheduler.py  service_config.py  service_logger.py  service_models.py  subprocess_task_runner.py  task_queue.py  task_refs.py  task_timer.py  timer.py  timezone.py
server/npu/: README.md  __init__.py  api_server.py  cli.py  client.py  config.py  device_selection.py  logger.py  main.py  models.py  npu_config_loader.py  npu_manager.py  scheduler.py  task_queue.py  task_runner.py
server/npu/configs/npu_resources/: aicc-06_npu_config.yml  ascend_910b_sample.yml
server/npu/test_scripts/: simple_npu_task.py
server/npu/tools/: __init__.py  npu_detect.py
tests/: test_npu_device_selection.py  test_npu_server_integration.py  test_timezone.py
tests/fixtures/: run_subprocess.py
